# flexible-text-analyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh  test_basic_functionality.py
src/: app.py
src/pages/: 1_データ取得.py  2_トピック抽出.py  3_トピック分類.py  4_テキスト分析.py  4_データ分析.py
src/schema/: classification.py  data_analysis.py  llm_models.py  llm_providers.py  topic.py
src/services/: data_analyzer.py  llm.py  text_analyzer.py  text_column_estimator.py  topic_classifier.py  topic_extractor.py  youtube_fetcher.py
