[project]
name = "mirai-analyzer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nasuka", email = "nsk.smn@gmail.com" }
]
dependencies = [
    "streamlit>=1.45.1",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.11",
    "google-api-python-client>=2.151.0",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "networkx>=3.0",
    "litellm>=1.71.1",
    "openrouter>=1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mirai_analyzer"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["mirai_analyzer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
